# dj-lite-tenant

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: checks.yml  publish.yml
django_sqlite_tenant/: __init__.py  admin.py  apps.py  conf.py  middleware.py  routers.py  signals.py  urls.py  utils.py
django_sqlite_tenant/backends/sqlite3/: base.py  operations.py
django_sqlite_tenant/management/commands/: create_user_db.py  migrate_user_dbs.py
docs/plans/: adr-001-connection-pooling.md
example/: README.md
example/catalog/: admin.py  models.py
example/catalog/migrations/: 0001_initial.py
example/notes/: admin.py  models.py  views.py
example/notes/migrations/: 0001_initial.py  0002_note_user.py
example/project/: asgi.py  settings.py  urls.py  wsgi.py
example/templates/: base.html
example/templates/notes/: movie_list.html  note_add.html  note_confirm_delete.html  note_list.html
example/templates/registration/: login.html
locust/: README.md  locustfile.py  setup.py
src/dj_lite_tenant/: admin.py  apps.py  conf.py  connection_registry.py  middleware.py  routers.py  signals.py  urls.py  utils.py
src/dj_lite_tenant/backends/sqlite3/: base.py  operations.py
src/dj_lite_tenant/management/commands/: create_tenant_db.py  migrate_tenant_dbs.py
tests/: conftest.py  settings.py  test_backends.py  test_benchmarks.py  test_concurrency.py  test_conf.py  test_connection_registry.py  test_integration.py  test_management_commands.py  test_middleware.py  test_routers.py  test_signals.py  test_utils.py  urls.py  views.py
tests/testapp/: models.py
