[project]
name = "django-sqlite-tenant"
version = "0.1.0"
description = "Per-user SQLite databases for Django with cross-DB ATTACH support"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-mock>=3.14",
]

[project.urls]
Homepage = "https://github.com/adamghill/django-sqlite-tenant"
Repository = "https://github.com/adamghill/django-sqlite-tenant"
Issues = "https://github.com/adamghill/django-sqlite-tenant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_sqlite_tenant"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["B027", "RUF012"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--quiet --failed-first"
testpaths = ["tests"]
