[project]
name = "dj-lite-tenant"
version = "0.1.0"
description = "Multi-tenant SQLite databases for Django."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "dj-lite>=1.3",
    "libcst>=1.8.6",
    "rich>=15.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-mock>=3.14",
]

[project.urls]
Homepage = "https://github.com/adamghill/dj-lite-tenant"
Repository = "https://github.com/adamghill/dj-lite-tenant"
Issues = "https://github.com/adamghill/dj-lite-tenant/issues"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["B027", "RUF012"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--quiet --failed-first"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that exercise real Django migrate / DB flows",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dj_lite_tenant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
