[project]
name = "dj-lite-tenant"
version = "0.1.0"
description = "Multi-tenant SQLite databases for Django."
authors = [{name = "Adam Hill"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "dj-lite>=1.3",
    "typeguard>=4.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9",
    "pytest-mock>=3.14",
    "ty>=0.0.1",
]
load-test = [
    "locust>=2.0",
    "gunicorn>=23.0",
]

[project.urls]
Homepage = "https://github.com/adamghill/dj-lite-tenant"
Repository = "https://github.com/adamghill/dj-lite-tenant"
Issues = "https://github.com/adamghill/dj-lite-tenant/issues"

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120
exclude = ["**/migrations/*", "example/**/*", "tests/**/*"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "B027",
  "FBT003",
  "S105", "S106", "S107",
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  "F841",
  "EM101", "EM102",
]
unfixable = [
  "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dj_lite_tenant"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = [
    "--quiet",
    "--failed-first",
    "--cov=dj_lite_tenant",
    "--cov-report=term-missing",
    "--benchmark-disable",
]
markers = [
    "benchmark: microbenchmarks (run with --benchmark-only to enable)",
    "integration: end-to-end tests that exercise real Django migrate / DB flows",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src/dj_lite_tenant"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.ty]

[tool.ty.src]
exclude = ["tests/**/*", "example/**/*"]

[tool.ty.rules]
unresolved-attribute = "ignore"
invalid-type-form = "ignore"
unresolved-import = "ignore"
unused-type-ignore-comment = "ignore"

[tool.hatch.build.targets.wheel]
packages = ["src/dj_lite_tenant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
